# garden-server

./: .gitignore  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  Dockerfile  Dockerfile3-11  Makefile  README.md  docker-entrypoint.sh  manage.py  nginx.default  pyproject.toml  requirements.txt  service.yaml  start_server.sh
.github/: dependabot.yml
.github/workflows/: auto-approve-dependabot.yml  auto-merge-dependabot.yml  ci.yml  gcp_push.yaml  release-please.yml  release.yml
apps/accounts/: apps.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: factories.py  test_models.py
apps/alerts/: admin.py  models.py
apps/alerts/management/commands/: scan_for_alerts.py
apps/alerts/migrations/: 0001_initial.py
apps/api/: serializers.py  urls.py  views.py
apps/api/tests/: test_v1_views.py
apps/api/v1/: routes.py  serializers.py  views.py
apps/navigation/: blocks.py  models.py
apps/navigation/migrations/: 0001_initial.py  0002_alter_headerlinks_header_links_and_more.py
apps/pages/: blocks.py  models.py
apps/pages/migrations/: 0001_initial.py  0002_create_homepage.py  0003_alter_blogdetailpage_content_alter_homepage_content_and_more.py
apps/pages/tests/: factories.py
apps/plants/: admin.py  choices.py  filters.py  forms.py  managers.py  mixins.py  models.py  urls.py  views.py
apps/plants/migrations/: 0001_initial.py  0002_alter_datapoint_data_type.py  0002_alter_datapoint_plant.py  0003_datatype_unique_chart_colour.py  0004_rename_datatype_sensor_alter_datapoint_time.py  0005_rename_data_type_datapoint_sensor_alter_sensor_plant.py  0006_sensorunit_sensor_new_unit.py  0007_new_units.py  0008_remove_sensor_new_unit_alter_sensor_unit.py  0009_alter_datapoint_options.py  0010_plant_zone.py  0011_alter_plant_zone.py  0012_remove_plant_indoor.py
apps/plants/tests/: factories.py  test_forms.py  test_models.py  test_views.py
apps/site_settings/: models.py
apps/site_settings/migrations/: 0001_initial.py  0002_socialaccounts.py
apps/weather/: admin.py  choices.py  models.py
apps/weather/management/commands/: populate_weather.py
apps/weather/migrations/: 0001_initial.py  0002_rename_apparent_temperate_weather_apparent_temperature.py  0003_weather_is_forecast.py  0004_set_default_weather.py  0005_alter_weather_is_forecast.py  0006_weather_created_weather_updated.py  0007_alter_weather_weather_code.py  0008_weather_weather_wea_date_ti_accf53_idx_and_more.py  0009_alter_weather_weather_code.py
apps/weather/tests/: conf.py  test_populate_weather_command.py
apps/zones/: admin.py  apps.py  models.py
apps/zones/migrations/: 0001_initial.py  0002_make_plant_zones.py
apps/zones/tests/: factories.py
htdocs/static/css/: plant_chart.css
htdocs/static/js/: add_more_inlines.js  plant_chart.js
project/: settings.py  urls.py
project/settings/: base.py  local.py  production.py  static.py  testing.py
requirements/: base.txt  local.txt  production.txt  testing.txt
services/: alert_service.yaml  weather_service.yaml  web_service.yaml
static/js/: get_plant_csv.js  plant_chart.js
static/src/js/: chart.js
static/src/scss/: chart.scss
templates/: base.html
templates/accounts/: login.html  logout.html  sign_up.html
templates/blocks/: quick_link_block.html
templates/includes/: footer.html  header.html
templates/pages/: base_page.html  blog_detail_page.html  blog_index_page.html
templates/plants/: api_details.html  base_update_or_create.html  chart.html  chart_new.html  charts.html  create.html  create_sensor.html  list.html  update.html  update_sensor.html
templates/plants/includes/: datatype_formset.html  individual_chart.html
templates/registration/: login.html
