[tool.poetry]
name = "garden-server"
version = "1.8.3"
description = "A django server used to collect and display data from garden IoT devices"
authors = ["Oli <oli.edmund.parker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.3"
djangorestframework = "^3.14.0"
django-filter = "23.2"
django-crispy-forms = "^2.0"
django-extra-views = "^0.14.0"
django-extensions = "^3.2.3"
martor = "1.6.27"
django-colorfield = "^0.9.0"
redis = "4.6.0"
hiredis = "2.2.3"
django-cookiefilter = "1.0"
django-timescaledb = { git="https://github.com/ollz272/django-timescaledb.git", rev="7d5fa2b" }
dj-database-url = "2.0.0"
ruff = "^0.0.278"
pre-commit = "^3.3.3"
parameterized = "^0.9.0"
psycopg = "^3.1.8"
whitenoise = "^6.5.0"
crispy-bootstrap5 = "^0.7"
pytz = "^2023.3"
djlint = "^1.31.1"


[tool.poetry.group.local.dependencies]
django-debug-toolbar = "^4.1.0"


[tool.poetry.group.prod.dependencies]
gunicorn = "^21.0.0"
django-storages = "^1.13.2"
boto3 = "^1.28.4"


[tool.poetry.group.test.dependencies]
coverage = "^7.2.7"
django-webtest = "^1.9.10"
factory-boy = "^3.2.1"
faker = "^19.1.0"
flake8 = "^6.0.0"
pipdeptree = "^2.10.2"
unittest-xml-reporting = "^3.2.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.per-file-ignores]
"project/settings/*.py" = ["F405", "F403"]
"apps/*/apps.py" = ['F401']

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
py_version=311
line_length = 120