[tool.poetry]
name = "garden-server"
version = "1.8.3"
description = "A django server used to collect and display data from garden IoT devices"
authors = ["Oli <oli.edmund.parker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"
djangorestframework = "^3.14.0"
django-filter = "23.3"
django-crispy-forms = "^2.0"
django-extra-views = "^0.14.0"
django-extensions = "^3.2.3"
martor = "1.6.28"
django-colorfield = "^0.10.1"
redis = "5.0.0"
hiredis = "2.2.3"
django-cookiefilter = "1.0"
django-timescaledb = { git="https://github.com/ollz272/django-timescaledb.git", rev="7d5fa2b" }
dj-database-url = "2.1.0"
ruff = "^0.0.291"
pre-commit = "^3.4.0"
parameterized = "^0.9.0"
psycopg = "^3.1.10"
whitenoise = "^6.5.0"
crispy-bootstrap5 = "^0.7"
pytz = "^2023.3"
djlint = "^1.34.0"


[tool.poetry.group.local.dependencies]
django-debug-toolbar = "^4.2.0"


[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
django-storages = "^1.14"
boto3 = "^1.28.66"


[tool.poetry.group.test.dependencies]
coverage = "^7.3.1"
django-webtest = "^1.9.11"
factory-boy = "^3.3.0"
faker = "^19.6.2"
flake8 = "^6.1.0"
pipdeptree = "^2.13.0"
unittest-xml-reporting = "^3.2.0"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.per-file-ignores]
"project/settings/*.py" = ["F405", "F403"]
"apps/*/apps.py" = ['F401']

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
py_version=311
line_length = 120